--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@ layout: default
 title:  blog, ideas, etc.
 ---
 
+<script language="javascript" type="text/javascript" src="/tagcloud/swfobject.js"></script>
+
+<div id="flashcontent"></div>
+<script language="javascript" type="text/javascript">swfobject.embedSWF("/tagcloud/imagecloud.swf", "flashcontent","400", "400","9", "",{cloud_data: "/tagcloud/cloud_data.xml"},{wmode: "transparent", menu: "false", quality: "high", scale:"noscale"});</script>
+
+
+
 {% for post in paginator.posts %}
   <h3 class="excerpt"><a href="{{ post.url }}">{{ post.title }}</a></h3>
   <p class="excerpt">
